<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="Einstellungen"
        android:key="pref_key_user_settings">

        <PreferenceScreen android:key="username"
            android:summary="@string/usernameSummary"
            android:title="@string/username"/>

        <PreferenceScreen android:key="Kommentar"
        android:title="@string/kommentare" android:id="@+id/CommentButton" >
        <intent android:action="de.muensterinside.mobile.MyCommentActivity" />
    </PreferenceScreen>
        <PreferenceScreen android:key="Location"
            android:title="@string/location" android:id="@+id/LocationButton" >
            <intent android:action="de.muensterinside.mobile.MyLocationActivity" />
        </PreferenceScreen>
        <PreferenceScreen android:key="Votes"
            android:title="@string/votes" android:id="@+id/VotesButton" >
            <intent android:action="de.muensterinside.mobile.MyVoteActivity" />
        </PreferenceScreen>


    </PreferenceCategory>
</PreferenceScreen>
