<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="de.muensterinside.mobile.LocationActivity">

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/smallCommentList"
        android:choiceMode="singleChoice"
        android:layout_alignEnd="@+id/button1"
        android:layout_above="@+id/button1"
        android:layout_below="@+id/textViewExampleLink" />



    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/button"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/ic_action_picture" />


    <Button style="?android:attr/buttonStyleSmall"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:drawableBottom="@drawable/ic_action_add"
        android:background="@android:color/transparent"
        android:id="@+id/button1"
        android:clickable="true"
        android:layout_alignTop="@+id/KommentarAnzeigen"
        android:layout_alignParentEnd="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/location_name"
        android:id="@+id/textViewName"
        android:textColor="#000000"
        android:layout_toEndOf="@+id/button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/location_vote"
        android:id="@+id/textViewVote"
        android:textColor="#000000"
        android:layout_below="@+id/textViewName"
        android:layout_toEndOf="@+id/button"
        android:layout_marginTop="55dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/location_link"
        android:id="@+id/textViewLink"
        android:textColor="#000000"
        android:layout_below="@+id/button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/example"
        android:id="@+id/textViewExampleName"
        android:textColor="#000000"
        android:layout_below="@+id/textViewName"
        android:layout_toEndOf="@+id/button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/example"
        android:id="@+id/textViewExampleVote"
        android:textColor="#000000"
        android:layout_below="@+id/textViewVote"
        android:layout_toEndOf="@+id/button" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/example"
        android:id="@+id/textViewExampleLink"
        android:textColor="#000000"
        android:layout_below="@+id/textViewLink"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:drawableBottom="@drawable/ic_action_like"
        android:background="@android:color/transparent"
        android:id="@+id/up"
        android:clickable="true"
        android:layout_alignBottom="@+id/button"
        android:layout_toEndOf="@+id/button" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:drawableBottom="@drawable/ic_action_dontlike"
        android:background="@android:color/transparent"
        android:id="@+id/down"
        android:layout_alignTop="@+id/up"
        android:layout_alignParentEnd="true"
        android:clickable="true" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showMoreComments"
        android:textColor="#000000"
        android:id="@+id/KommentarAnzeigen"
        android:background="@android:color/transparent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
